--- a/packages/markdown-block-editor/src/kurage/editor.scss
+++ b/packages/markdown-block-editor/src/kurage/editor.scss
@@ -80,4 +80,15 @@
 
 
 
+.block-editor-maximizer
+{
+    position: fixed !important;
+    top:  0 !important;
+    left:  0px !important;
+    width:  100% !important;
+    max-width:  100% !important;
+    height: 100% !important;
+    z-index:  100 !important;
+	background-color: white;
 
+}
