UIの調整とテーマの選択設定追加等。

--- a/packages/markdown-block-editor-extensions/src/token-viewer.scss
+++ b/packages/markdown-block-editor-extensions/src/token-viewer.scss
@@ -73,3 +73,13 @@ $left: 1.2em;
     .left-14 { padding-left: $left * 14; }
     .left-15 { padding-left: $left * 15; }
 }
+
+body
+{
+    background-color: red;
+}
+
+div
+{
+    font-size: 3em;
+}
