--- a/packages/markdown-block-editor/src/kurage/components/token-viewer.scss
+++ b/packages/markdown-block-editor/src/kurage/components/token-viewer.scss
@@ -1,48 +1,15 @@
 
 $left: .5em;
 
-.token-viewer
+.token-scrollbar
 {
     height: 25em;
     width: 100%;
-    overflow: scroll;
-
-    ul
-    {
-        margin: 0
-    }
-
-    ul li
-    {
-        list-style: none;
-        padding: 2px 0px 0px 0px;
-        margin: 0;
-    }
-
-    ul li div { padding-left: $left * 0; }
-    ul li ul li div { padding-left: $left * 1; }
-    ul li ul li ul li div { padding-left: $left * 2; }
-    ul li ul li ul li ul li div { padding-left: $left * 3; }
-    ul li ul li ul li ul li ul li div { padding-left: $left * 4; }
-    ul li ul li ul li ul li ul li ul li div { padding-left: $left * 5; }
-    ul li ul li ul li ul li ul li ul li ul li div { padding-left: $left * 6; }
-    ul li ul li ul li ul li ul li ul li ul li ul li div { padding-left: $left * 7; }
-
-
-    button
-    {
-        font-size: 1.2em;
-        width: 100%;
-    }
-
+    overflow: scroll !important;
 }
 
-
-.token-deps
+.token-hierarchical-padding
 {
-    font-family: monospace;
-    font-size: 1.2em;
-    
     .left-0 { padding-left: $left * 0; }
     .left-1 { padding-left: $left * 1; }
     .left-2 { padding-left: $left * 2; }
@@ -59,13 +26,22 @@ $left: .5em;
     .left-13 { padding-left: $left * 13; }
     .left-14 { padding-left: $left * 14; }
     .left-15 { padding-left: $left * 15; }
+}
+
+.token-tree-view
+{
+
+    @extend .token-hierarchical-padding;
+
+    font-family: monospace;
+    font-size: 1.2em;
+    margin: .2em 0;
 
     div
     {
         position: relative;
         overflow: hidden;
         white-space: nowrap;
-        margin: .1em 0;
         
 
 
@@ -108,6 +84,27 @@ $left: .5em;
 
     }
 
+    &.navigation-bar
+    {
+        border: 1px solid rgb(26, 83, 26);
+
+        > div.navigation-bar-label
+        {
+            font-size: .8em;
+            font-weight: bold;
+            color: white;
+            padding: .2em;
+            text-align: center;
+            background-color: #1d921d;
+        }
+    }
+}
+
+.token-checker
+{
+
+    @extend .token-hierarchical-padding;
+    
     table
     {
         width: 100%;
